--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-index.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous"
+    />
+<link rel="stylesheet" href="src/style.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
+    <title>Weather App</title>
+</head>
+<body>
+    <div class="container">
+   <div class="card">
+   <nav class="navbar bg-body-tertiary">
+  <div class="container-fluid">
+    <form class="d-flex" role="search">
+      <input class="form-control me-2" type="search" placeholder="Search city" aria-label="Search">
+      <button class="btn btn-outline-success" type="submit">Search</button>
+    </form>
+    </nav> 
+    <div class="weather">
+        <h2 class="city">
+        New York
+    </h2>
+        <h1 class="temp">12°</h1>
+        <img src=""alt=  class="icon"/>
+        <div class="discription"></div>
+        <div class="humidity"> Humidity: %</div>
+        <div class="wind"></div>
+ </div>
+    </div>
+  </div>
+    </div>
+   </div>
+   <script src="src/app.js"></script>
+</body>
+</html>
