--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         New York
     </h2>
         <h1 class="temp">12°</h1>
-        <img src=""alt=  class="icon"/>
+        <img src=""alt= "" class= "icon"/>
         <div class="discription"></div>
         <div class="humidity"> Humidity: %</div>
         <div class="wind"></div>
