--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
         <h2 class="city">
         New York
     </h2>
-        <h1 class="temp">12°</h1>
+        <h1 class="temp">12° 🌦</h1>
         <img src=""alt= "" class= "icon"/>
         <div class="discription"></div>
         <div class="humidity"> Humidity: %</div>
-        <div class="wind"></div>
+        <div class="wind">Wind Speed</div>
+   <a href="https://github.com/milenaalexandra874/Weather-app-1.git"> Open-Source code, by Milena Munguia</a>
  </div>
     </div>
   </div>
